Fixes Bootstrap 2.x -> 3.0 errors in header.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,13 +23,13 @@
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
+                    <a class="btn navbar-btn" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="glyphicon-bar"></span>
+                        <span class="glyphicon-bar"></span>
+                        <span class="glyphicon-bar"></span>
                     </a>
-                    <a class="brand" href="#">{{ site.name }}</a>
-                    <div class="nav-collapse collapse">
+                    <a class="navbar-brand" href="#">{{ site.name }}</a>
+                    <div class="navbar-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="/">Home</a></li>
                         </ul>
