--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,10 @@
 {% include header.html %}
-{{ content }}
+<div class="row">
+    <div class="col-md-8">
+        {{ content }}
+    </div>
+    <div class="col-md-4">
+        {% include sidebar.html %}
+    </div>
+</div>
 {% include footer.html %}
