--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,19 +21,20 @@
 
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container">
-                    <a class="btn navbar-btn" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="glyphicon-bar"></span>
-                        <span class="glyphicon-bar"></span>
-                        <span class="glyphicon-bar"></span>
-                    </a>
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                     <a class="navbar-brand" href="#">{{ site.name }}</a>
-                    <div class="navbar-collapse collapse">
-                        <ul class="nav">
-                            <li class="active"><a href="/">Home</a></li>
-                        </ul>
-                    </div>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="/">Home</a></li>
+                        <li class="active"><a href="https://docs.google.com/file/d/0B3eCgHAMH9cCZEdpMXprMkdSbnc">Coaching Guidebook</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
