--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,10 @@
 <h3>About Me</h3>
 
 <p>I am a 25 year old aspiring soccer manager currently living in Delaware. My current coaching responsibilities are that of a U10 Boys assistant coach. My thirst for knowledge of all aspects of coaching and managing knows no bounds, and I also draw on what experience I can from my mathematics and engineering background.</p>
+
+<h3>Recent Posts</h3>
+<ul>
+    {% for post in site.posts limit: 5 %}
+    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+</ul>
