--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,13 +5,12 @@
         <title>{{ site.name }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
-        <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="/css/bootstrap.css" rel="stylesheet" media="screen">
         <style>
             body {
                 padding-top: 60px;
             }
         </style>
-        <link href="/css/bootstrap-responsive.css" rel="stylesheet">
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
         <script src="../../assets/js/html5shiv.js"></script>
