--- a/_layouts/guidebook.html
+++ b/_layouts/guidebook.html
@@ -11,6 +11,7 @@
                 padding-top: 60px;
             }
         </style>
+        <link href="/css/bootstrap-responsive.css" rel="stylesheet">
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
         <script src="../../assets/js/html5shiv.js"></script>
@@ -18,7 +19,7 @@
         <![endif]-->
     </head>
 
-    <body>
+    <body data-spy="scroll" data-target="#side-nav">
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
@@ -40,3 +41,5 @@
         </div>
 
         <div class="container">
+{{ content }}
+{% include footer.html %}
