--- a/_layouts/guidebook.html
+++ b/_layouts/guidebook.html
@@ -1,45 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>{{ site.name }}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Bootstrap -->
-        <link href="/css/bootstrap.css" rel="stylesheet" media="screen">
-        <style>
-            body {
-                padding-top: 60px;
-            }
-        </style>
-        <link href="/css/bootstrap-responsive.css" rel="stylesheet">
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
-        <script src="../../assets/js/html5shiv.js"></script>
-        <script src="../../assets/js/respond.min.js"></script>
-        <![endif]-->
-    </head>
-
-    <body data-spy="scroll" data-target="#side-nav">
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">{{ site.name }}</a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/guidebook">Guidebook</a></li>
-                        <li><a href="https://docs.google.com/file/d/0B3eCgHAMH9cCZEdpMXprMkdSbnc">Coaching Guidebook</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div class="container">
+{% include header-guidebook.html %}
 {{ content }}
 {% include footer.html %}
