--- a/_includes/header-guidebook.html
+++ b/_includes/header-guidebook.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
         <link href="/css/bootstrap.css" rel="stylesheet" media="screen">
+        <link href="/css/jquery.tocify.css" rel="stylesheet" media="screen">
         <style>
             body {
                 padding-top: 60px;
@@ -18,7 +19,7 @@
         <![endif]-->
     </head>
 
-    <body data-spy="scroll" data-target="#side-nav">
+    <body>
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
