--- a/_includes/footer-guidebook.html
+++ b/_includes/footer-guidebook.html
@@ -1,8 +1,8 @@
         </div>
-    <script src="/js/jquery-1.10.2.js"></script>
-    <script src="/js/jquery-ui-1.10.3.custom.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="/js/jquery.tocify.js"></script>
-    <script src="/js/bootstrap.js"></script>
     <script src="/js/guidebook.js"></script>
     </body>
 </html>
