--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
         </div>
     </body>
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="/js/bootstrap.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 </html>
