--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <title>{{ site.name }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
-        <link href="/css/bootstrap.css" rel="stylesheet" media="screen">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <style>
             body {
                 padding-top: 60px;
