--- a/_includes/footer-guidebook.html
+++ b/_includes/footer-guidebook.html
@@ -1,3 +1,5 @@
+                </div>
+            </div>
         </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
