--- a/_includes/header-guidebook.html
+++ b/_includes/header-guidebook.html
@@ -41,3 +41,8 @@
         </div>
 
         <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div id="toc"></div>
+                </div>
+                <div class="col-md-9">
