--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,9 @@
 <h3>About Me</h3>
 
-<p>I am a 25 year old aspiring soccer manager currently living in Delaware. My current coaching responsibilities are that of a U10 Boys assistant coach. My thirst for knowledge of all aspects of coaching and managing knows no bounds, and I draw on what experience I can from my mathematics and engineering background. I am also a fervent Liverpool supporter.</p>
+<p>I am a 25 year old aspiring soccer manager currently living in Delaware. My current coaching responsibilities are that of a U10 Boys coach. My thirst for knowledge of all aspects of coaching and managing knows no bounds, and I draw on what experience I can from my mathematics and engineering background. I am also a fervent Liverpool supporter.</p>
+
+<h3>Contact</h3>
+<address><a href="mailto:daniel.hertenstein@gmail.com">daniel.hertenstein@gmail.com</a></address>
 
 <h3>Recent Posts</h3>
 <ul>
