--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,6 +33,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/">Home</a></li>
                         <li><a href="/guidebook">Guidebook</a></li>
+                        <li><a href="/experience">Experience</a></li>
                     </ul>
                 </div>
             </div>
